--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-filelist": "^0.4.0",
     "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.0",
-    "gulp-sequence": "^0.4.5"
+    "gulp-sequence": "^0.4.5",
+    "phridge": "^2.0.0"
   }
 }
