--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
@@ -28,6 +30,8 @@
     "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.0",
     "gulp-sequence": "^0.4.5",
-    "phridge": "^2.0.0"
+    "phridge": "^2.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
